# nearmiss

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  Makefile  NOTICE  README.md  SECURITY.md  babel.cfg  index.html  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  hazard_report.yml
.github/workflows/: ci.yml  live-integrity.yml  mutation.yml  release.yml  scorecard.yml  secret-scan-scheduled.yml
benchmarks/: README.md  SCORECARD.md  generator.py  scorer.py
benchmarks/configs/: baseline.json  exposure_error.json  maup_coarse.json  maup_fine.json  overdispersion.json  reporting_bias.json
benchmarks/schema/: results.schema.json
config/: davis-demo.toml  davis.toml  riverside-demo.toml  sacramento.toml
config/sources/: davis-demo.toml
data/: README.md
data/published/: .gitkeep  davis-ranked.md  davis-sensitivity.md  davis.corridors.geojson  davis.geojson  davis.metadata.json  davis.run.json  fars-2020-state-mode.json  fars-2021-state-mode.json  fars-2022-state-mode.json  fars-2023-state-mode.json  fars-2024-state-mode-r2.json  fars-2024-state-mode.json  fars-release-corrections.json  fars-state-mode-index-v2.json  fars-state-mode-index.json  riverside-ranked.md  riverside-sensitivity.md  riverside.corridors.geojson  riverside.geojson  riverside.metadata.json  riverside.run.json  us-state-boundaries-2024.json
docs/: ACCESSIBILITY.md  ADAPTING.md  BRAND.md  CLAIMS.md  COVERAGE-TIERS.md  DATA-CARD.md  DECISION-DOSSIER-TEMPLATE.md  DECISION-DOSSIER.md  DOCUMENTATION-AUDIT.md  DPIA.md  I18N.md  INGESTION.md  INTAKE-AND-ABUSE.md  LIMITATIONS.md  LIVE-INTEGRITY.md  METHODOLOGY.md  MUTATION-TESTING.md  PERFORMANCE.md  PREREGISTRATION.md  PRIVATE-COUNTY-CROSSWALK-REVIEW.md  PRODUCT-EXPANSION-PLAN.md  PROJECT-SCOPE.md  PUBLIC-COUNTY-ARTIFACT-CONTRACT.md  PUBLIC-COUNTY-BOUNDARY-CONTRACT.md  PUBLIC-COUNTY-RELEASE-INDEX-CONTRACT.md  RE-IDENTIFICATION.md  README.md  REAL-DATA.md  RESEARCH-ROADMAP.md  RESPONSIBLE-TECH-AUDITS.md  ROADMAP.md  SUBMISSIONS.md  THREAT-MODEL.md  USER-RESEARCH.md
docs/accessibility/: ACR.md
docs/adr/: 0000-record-architecture-decisions.md  0001-record-architecture-decisions.md  0002-exposure-normalization-and-confidence-intervals.md  0003-pure-python-statistics-and-planar-geometry.md  0004-standards-applicability.md  0005-build-pages-artifact-before-deployment.md  0006-separate-official-outcomes-from-contributor-reports.md  0007-content-addressed-fail-closed-ingestion.md  0008-normalize-local-fars-into-private-verified-artifacts.md  0009-separate-source-declaration-verification-and-triangulation.md  0010-schedule-read-only-live-integrity-verification.md  0011-version-public-fars-provenance-corrections.md  0012-solo-maintainer-provisional-review-attestation.md  0013-keep-python-311-floor.md
docs/audits/: 2026-06-16-verification.md  2026-07-16-national-evidence-studio-a11y.md  README.md
docs/ideation/: 01-deep-dive.md  02-large-scale-fixes.md  03-expansions.md  README.md  (+1 more)
infra/: README.md  aws-static-site.yml
notebooks/: README.md  hotspots.ipynb
schema/: dataset.schema.json  dataset.schema.md  fars-county-crosswalk.schema.json  ingestion-receipt.schema.json  official-outcome-artifact.schema.json  official-outcome.schema.json  private-fars-context.schema.json  private-fars-county-feasibility.schema.json  private-fars-county-projection.schema.json  private-fars-joined-outcomes-v2.schema.json  private-fars-joined-outcomes.schema.json  private-fars-national-context.schema.json  public-fars-county-context-index.schema.json  public-fars-county-release-corrections.schema.json  public-fars-state-context-index.schema.json  public-fars-state-context.schema.json  public-us-county-boundaries.schema.json  report.schema.json  us-county-boundaries.schema.json
tests/: README.md  conftest.py  test_adapters_conformance.py  test_benchmark_suite.py  test_bias.py  test_brief.py  test_build_exposure.py  test_build_site.py  test_calibration.py  test_cli.py  test_config.py  test_contributor.py  test_corridors.py  test_coverage.py  test_coverage_simulation.py  test_dataset_schema.py  test_dedupe_differential.py  test_diff_datasets.py  test_dossier.py  test_dp_temporal.py  test_exact_input_bytes.py  test_exposure_tiers.py  test_fars_adapter.py  test_fars_context.py  test_fars_context_activation.py  test_fars_context_activation_edge_cases.py  test_fars_context_schema.py  test_fars_county_boundary_publication.py  test_fars_county_crosswalk.py  test_fars_county_crosswalk_review.py  test_fars_county_feasibility.py  test_fars_county_projection.py  test_fars_county_public_index.py  test_fars_county_publication.py  test_fars_joined_adapter.py  test_fars_national_context.py  test_fars_public_context.py  test_fars_public_index.py  test_fars_year_activation.py  test_fars_year_contracts.py  (+62 more)
tools/: __init__.py  a11y_check.py  axe_check.mjs  benchmark.py  build_exposure.py  build_fars_correction_ledger.py  build_fars_county_crosswalk.py  build_fars_county_public_index.py  build_fars_public_index.py  build_site.py  build_us_county_boundaries.py  build_us_state_boundaries.py  check_bcp47.py  check_catalog_parity.py  check_claims.py  diff_datasets.py  export_fars_public_context.py  fetch_bikemaps.py  fetch_osm_streets.py  fetch_simra.py  fetch_weather.py  i18n_normalize_pot.py  make_fixtures.py  make_pseudolocale.py  make_riverside.py  po2json.py  sensitivity_note.py  verify_dataset.py  verify_live_site.py
web/: README.md  app.js  axe_check.mjs  brand.css  contract_check.mjs  davis-demo.html  dossier.html  dossier.js  embed.css  embed.html  embed.js  i18n.js  index.html  interface.css  landing.css  nearmiss-embed.js  package-lock.json  package.json  rtl_check.mjs  share-card.js  studio.html  studio.js  style.css  submit.html  submit.js  us-coverage-studio.css  us-coverage.css  us-coverage.html  us-coverage.js  us_coverage_check.mjs  workflow.css  workflow_check.mjs
(+164 files in other folders)
