# nearmiss — project metadata and tooling configuration.
# Single source of truth for build, dependencies, and the lint/type/test gates.
[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "nearmiss"
version = "0.1.0"
description = "An open dataset and statistically honest analysis of road hazards and near misses for safe-streets advocacy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Chelsea Kelly-Reif" }]
keywords = [
  "road safety",
  "near miss",
  "cycling",
  "pedestrian safety",
  "open data",
  "spatial statistics",
  "getis-ord",
  "exposure normalization",
  "advocacy",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Typing :: Typed",
]

# Core runtime dependency is intentionally minimal: only a JSON Schema validator.
# The geometry and statistics are pure, typed standard-library Python, so the
# analysis runs anywhere Python 3.11+ runs, with no native/geospatial build step.
# Versions are pinned and hashed in the generated lock file used for reproducible runs.
dependencies = [
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
  "pip-audit>=2.7",
  # i18n message-catalog tooling (INTERNATIONALIZATION-STANDARD §3/§4). Babel
  # provides `pybabel extract` and the CLDR-backed `Locale.parse` used by the
  # i18n gates. Pure Python (no PyICU/native ICU build) so the "runs anywhere
  # Python runs, no native build step" property is preserved; `msgfmt` (G7) is
  # a system gettext binary, like gitleaks, not a pip dependency.
  "babel>=2.16",
  # pip-audit pulls in CacheControl -> msgpack transitively; pin the fixed
  # version so the blocking pip-audit gate cannot resolve to msgpack 1.2.0
  # (GHSA-6v7p-g79w-8964, fixed in 1.2.1). Keeps the SCA gate deterministically
  # green instead of relying on the resolver to pick the newest msgpack.
  "msgpack>=1.2.1",
  "pre-commit>=3.7",
]
# Advisory mutation testing (backlog #15). Kept in its OWN optional group, NOT in
# `dev`, so the `make verify` merge gate — and in particular the blocking
# `pip-audit --strict` security scan — audits exactly the same dependency surface
# it does today. mutmut pulls in a large transitive tree (libcst, textual, ...);
# isolating it here means a future CVE in one of those tools can never break the
# merge gate. Mutation testing is advisory and non-blocking (see `make mutation`).
# Install on demand:  pip install -e ".[mutation]"
mutation = [
  "mutmut>=3.6",
]

[project.urls]
Homepage = "https://github.com/ChelseaKR/nearmiss"
Repository = "https://github.com/ChelseaKR/nearmiss"
Changelog = "https://github.com/ChelseaKR/nearmiss/blob/main/CHANGELOG.md"
Issues = "https://github.com/ChelseaKR/nearmiss/issues"
Methodology = "https://github.com/ChelseaKR/nearmiss/blob/main/docs/METHODOLOGY.md"

[project.scripts]
nearmiss = "nearmiss.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nearmiss"]

# ---------------------------------------------------------------------------
# Lint — ruff (style + a broad rule set). Part of `make verify`.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
# Notebooks are an exploratory space; don't hold them to import-order/format rules.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "PTH", "RUF"]
# This project's user-facing strings intentionally use Unicode typography
# (en/em dashes, ★, ⚠) — so the "ambiguous character" rules are noise here.
ignore = ["RUF001", "RUF002", "RUF003"]

# ---------------------------------------------------------------------------
# Types — mypy strict. A typed, analyzable codebase. Part of `make verify`.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# jsonschema ships limited inline types; treat its imports as untyped here.
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Tests — pytest. Deterministic, against known-answer fixtures.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
xfail_strict = true

# ---------------------------------------------------------------------------
# Mutation testing — mutmut. ADVISORY ONLY (backlog #15), never a merge gate.
#
# Scoped deliberately to the correctness-critical spatial-statistics core, where
# a silent numerical bug (an off-by-one in neighbor weighting, a dropped sign,
# a `<=`/`<` slip in the distance band) would quietly corrupt a hotspot result
# without failing any coarse test:
#   * getis_ord.py — the Getis-Ord Gi* local hotspot z-score + the FDR control
#   * rates.py     — the Poisson (Byar) and Wilson confidence intervals that
#                    produce the exposure-normalized rate the hotspot runs on
# (The task brief named a `stats/maup.py`; no such module exists in this repo —
# the Getis-Ord computation lives in getis_ord.py, which is targeted here.)
#
# It reuses the existing pytest suite (the stats tests) as the kill oracle, so
# no separate mutation-only test harness is maintained. Run it with
# `make mutation`; see docs/MUTATION-TESTING.md for the baseline and workflow.
# ---------------------------------------------------------------------------
[tool.mutmut]
# Copy the whole package so imports resolve, but mutate ONLY the two files below.
source_paths = ["src"]
only_mutate = [
  "src/nearmiss/stats/getis_ord.py",
  "src/nearmiss/stats/rates.py",
]
# Kill oracle: the existing stats tests. test_hotspot.py exercises the Gi*
# computation end to end via the known-answer fixtures; test_fdr.py and
# test_rates.py cover the FDR and CI helpers directly. Scoping the selection
# keeps each mutant fast to check (advisory, bounded).
pytest_add_cli_args_test_selection = [
  "tests/test_hotspot.py",
  "tests/test_fdr.py",
  "tests/test_rates.py",
  "tests/test_stats_numerics.py",
]
# The bundle fixture loads config/davis-demo.toml (which points at the fixtures
# under tests/, already copied). mutmut runs from a mutants/ working copy, so the
# config dir must be copied in alongside it.
also_copy = ["config"]
